--- a/Source /templates/stylesheets/newstyle.css
+++ b/Source /templates/stylesheets/newstyle.css
@@ -10,7 +10,9 @@ html, body {
 
 body {
 	align-items: center;
-    background-color: #FFF;
+    background-image: url('/images/newblog.png');
+    background-position: center center;
+    background-size: cover;
 	display: flex;
 	font-family: 'Raleway', sans-serif;
 	flex-direction: column;
@@ -21,7 +23,6 @@ body {
 div.container {
 	align-items: center;
 	align-self: center;
-	background: url('images/newblog.jpg')center center;
 	display: inline-flex;
 	flex-direction: column;
 	justify-content: center;
@@ -62,7 +63,7 @@ background: linear-gradient(to right, rgba(252,74,26,0.9), rgba(58,9,141,0.9)); 
   font-weight: bold;
   letter-spacing: 1px;
   padding: 16px 32px;
-  margin: 5px 0 170px 0;
+  margin: 5px 0 170px 430px;
   text-decoration: none;
   text-transform: uppercase;
   -webkit-transition: box-shadow 1s ease;
